# mai-server

./: .gitignore  Cargo.toml  LICENSE  README.md  run.sh  run_local.sh
gw-server/: Cargo.toml
gw-server/examples/: embeddings.rs  laurin_ocr.rs  start_model_via_admin_api.rs
gw-server/http/: curl.sh  devstral-small-2-24B-instruct-2512.json  gemma-3-12b-it-qat-Q8_0.json  gemma-3-27b-it-qat-Q8_0.json  glm-4.6v-flash.json  gpt-oss-120b-Q8_0.json  granite-4.0-h-small.json  nemotron-3-nano-30b-a3b.json  phi-4-reasoning-plus.json  qwen3-vl-30b-a3b-instruct.json  qwen3-vl-30b-a3b-thinking.json  tests.http
gw-server/src/: lib.rs  main.rs  model.rs
gw-server/src/application/: mod.rs  modelmanagerrouter.rs  openairouter.rs
gw-server/src/application/middleware/: limitmaxparallelrequests.rs  mod.rs  requestloggermw.rs  securitymw.rs
gw-server/src/application/model/: llmodels.rs  mod.rs  modellist.rs
gw-server/src/domain/model/: mod.rs
gw-server/src/domain/ports/: mod.rs
gw-server/src/domain/service/: defaultmodelsservice.rs  inferencebackendmodelmanagerservice.rs  mod.rs  openaiclientrequestforwardservice.rs
gw-server/src/infrastructure/: mod.rs  model.rs
gw-server/src/infrastructure/adapter/: llamacppcontrolleradapter.rs  localllamacppclient.rs  mod.rs  staticmodelloader.rs
gw-server/src/infrastructure/adapter/localllamacppclient/: mod.rs  responsepayload.rs
gw-server/src/manager/: mod.rs  model.rs
gw-server/src/middleware/: mod.rs
inference-backends/: Cargo.toml
inference-backends/examples/: anima_turbo_01.rs  cli_controlled.rs  flux2klein9b_01.rs  flux2klein9b_02.rs  krea2_turbo_01.rs  krea2_turbo_02.rs  zimage_01.rs  zimage_turbo_01.rs
inference-backends/src/: lib.rs
inference-backends/src/comfyui/: comfyuiconfig.rs  mod.rs
inference-backends/src/llamacpp/: llamacppconfig.rs  mod.rs
inference-backends/src/stablediffusioncpp/: animaturbo.rs  helpers.rs  krea2turbo.rs  mod.rs  stablediffusionconfig.rs  zimage.rs  (+1 more)
managed-process/: Cargo.toml
managed-process/src/: backendcontroller.rs  lib.rs  statemanager.rs
staticmodelconfig/: Cargo.toml
staticmodelconfig/examples/: update_static_config_files.rs
staticmodelconfig/src/: error.rs  lib.rs
staticmodelconfig/src/model/: contextsizeawarealias.rs  mod.rs  modelconfiguration.rs  modellist.rs
staticmodelconfig/static_config_files/: all-MiniLM-L6-v2.json  bge-m3.json  chandra.json  devstral-2-123B-instruct-2512-ud-q4-k-xl.json  devstral-small-2-24B-instruct-2512.json  gemma-3-12b-it-qat-Q8_0.json  gemma-3-27b-it-qat-Q8_0.json  gemma-4-12b-it-non-thinking.json  gemma-4-12b-it-thinking.json  gemma-4-12b-it-ud-q8-k-xl-non-thinking.json  gemma-4-12b-it-ud-q8-k-xl-thinking.json  gemma-4-12b-it-ud-q8-k-xl.json  gemma-4-12b-it.json  gemma-4-26b-a4b-it-qat-ud-q4-k-xl-non-thinking.json  gemma-4-26b-a4b-it-qat-ud-q4-k-xl-thinking.json  gemma-4-26b-a4b-it-qat-ud-q4-k-xl.json  gemma-4-26b-a4b-non-thinking.json  gemma-4-26b-a4b-thinking.json  gemma-4-26b-a4b-ud-q8-k-xl-non-thinking.json  gemma-4-26b-a4b-ud-q8-k-xl-thinking.json  gemma-4-26b-a4b-ud-q8-k-xl.json  gemma-4-26b-a4b.json  gemma-4-31b-it-non-thinking.json  gemma-4-31b-it-thinking.json  gemma-4-31b-it-ud-q8-k-xl-non-thinking.json  gemma-4-31b-it-ud-q8-k-xl-thinking.json  gemma-4-31b-it-ud-q8-k-xl.json  gemma-4-31b-it.json  gemma-4-31b-no-mtmd-it-ud-q8-k-xl.json  gemma-4-e4b-non-thinking.json  gemma-4-e4b-thinking.json  gemma-4-e4b-uncensored.json  glm-4.6v-flash.json  glm-4.7-flash-ud-q8_k_xl.json  gpt-oss-120b-Q8_0.json  gpt-oss-120b-f16.json  gpt-oss-120b.json  granite-4.0-h-small.json  iquest-coder-v1-40b-instruct-q8.json  jina-embeddings-v3.json  (+89 more)
(+12 files in other folders)
