[workspace]
members = [ "managed-process", "gw-server" , "inference-backends", "staticmodelconfig"]
default-members = [ "gw-server" ]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["Technose02 <technose02@yahoo.de>"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
tracing = { version = "0.1.44" }
