[package]
name = "gw-server"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
managed-process = { path = "../managed-process" }
inference-backends = { path = "../inference-backends" }
axum = { version = "0.8.8", features = ["http2", "macros", "multipart", "ws"] }
rand = "0.9.2"
tokio = { workspace = true }
serde = { workspace = true }
hyper-util = { version = "0.1.19", features = ["client", "client-legacy", "tokio"] }
async-trait = "0.1.89"
serde_json = "1.0.149"
axum-server = { version = "0.8.0", features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", features = ["ring"] }
async-openai = { version = "0.32.3", features = ["chat-completion-types"] }

