[package]
name = "staticmodelconfig"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
inference-backends = { path = "../inference-backends" }
serde = { workspace = true }

[dev-dependencies]
serde_json = "1.0.149"
tokio = { workspace = true }
reqwest = { version = "0.13", features = ["json"] }