[package]
name = "staticmodelconfig"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
inference-backends = { path = "../inference-backends" }
serde = { workspace = true }
serde_json = "1.0.149"
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
reqwest = { version = "0.13", features = ["json"] }
tracing-subscriber = { workspace = true }
